--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && echo "${{ secrets.FIREBASE }}" > environments/environment.ts && npm run build
+      - run: npm ci && touch src/environments/environment.ts && echo "${{ secrets.FIREBASE }}" > src/environments/environment.ts && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
