--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_REAGANPORTFOLIO_312CF }}'
           channelId: live
           projectId: reaganportfolio-312cf
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
